--- a/projeto inte/index.html
+++ b/projeto inte/index.html
@@ -140,6 +140,7 @@
         <section>
             <h2>Conclusão</h2>
             <p>A tecnologia pode ser tanto uma ameaça quanto uma aliada do meio ambiente. Com o uso responsável e sustentável, é possível minimizar os impactos e garantir um futuro melhor.</p>
+            <p>Site feito por Erick da Silva , Lara Raissa Vieira , Giovanna Victoria , Gizelly Monteiro , Adriel Lima  </p>
         </section>
     </main>
 
