--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="icon.jpeg">
+    <link rel="shortcut icon" href="icon.jpeg">
     <title>Meu Site Sustentável</title>
     <style>
         body {
@@ -102,9 +104,13 @@
             <h2>Impactos Ambientais da Tecnologia</h2>
             <h4>1. Lixo Eletrônico (E-Waste)</h4>
             <p>Com o rápido avanço tecnológico, milhões de toneladas de lixo eletrônico são geradas anualmente. O descarte inadequado pode contaminar o solo e a água com metais pesados.</p>
-            
+            <img src="imglixo.jpeg" alt="lixo eletrônico" width="300" height="200">
+
             <h4>2. Consumo de Energia em Data Centers</h4>
             <p>Data centers são grandes consumidores de energia. Muitos ainda dependem de fontes não renováveis, aumentando as emissões de gases de efeito estufa.</p>
+            <img src="grafico.jpeg" alt="grafico de consumo" width="300" height="200">
+            <p>Os gráficos mostram o aumento contínuo do consumo de energia pelos data centers ao longo dos anos, passando de aproximadamente 200 TWh em 2010 para mais de 450 TWh especificados para 2024. Esse crescimento reflete a crescente demanda por serviços digitais, como armazenamento em nuvem, big data e inteligência artificial, e evidência a necessidade urgente de adoção mais eficiente para prejuízo o impacto ambiental.</p>
+
         </section>
 
         <section>
@@ -114,6 +120,8 @@
             
             <h4>2. Reciclagem de Dispositivos Eletrônicos</h4>
             <p>Programas de reciclagem ajudam a reutilizar materiais como ouro, prata e cobre, reduzindo a extração de recursos naturais.</p>
+            <img src="img3.jpeg" alt="reciclagem" width="300" height="200">
+
 
             <h4>3. Economia Circular</h4>
             <p>A reutilização e o recondicionamento de dispositivos prolongam sua vida útil e diminuem o desperdício.</p>
@@ -123,8 +131,16 @@
         </section>
 
         <section>
+            <h2>Adoção de Soluções Sustentáveis em TI (2010-2020)</h2>
+            <p>O gráfico destaca a evolução de três importantes iniciativas sustentáveis no setor de TI: o uso de energias renováveis, a reciclagem de lixo eletrônico e a eficiência energética. Entre 2010 e 2020, observa-se um aumento significativo em todas essas práticas, com destaque para o uso de fontes renováveis, que ultrapassou 80% ao final do período. Essa tendência reflete o esforço crescente das empresas de TI para reduzir sua pegada ambiental, melhorar o gerenciamento de resíduos eletrônicos e adotar tecnologias energeticamente eficientes.</p>
+            <img src="grafico2.jpeg" alt="grafico de soluções" width="400" height="300">
+
+        </section>
+
+        <section>
             <h2>Conclusão</h2>
             <p>A tecnologia pode ser tanto uma ameaça quanto uma aliada do meio ambiente. Com o uso responsável e sustentável, é possível minimizar os impactos e garantir um futuro melhor.</p>
+            <p>Site feito por Erick da Silva , Lara Raissa Vieira , Giovanna Victoria , Gizelly Monteiro , Adriel Lima  </p>
         </section>
     </main>
 
