--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            background-image: url("fundo.jpeg");
+            background-image:: url("fundo.jpeg");
             background-size: cover;
             background-position: center;
             background-repeat: repeat-y;
