--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         nav {
             display: flex;
-            justify-content: center;
+            justify-content: ;
             background-color: #33a018;
             padding: 10px 0;
             margin-top: 50px;
@@ -88,24 +88,6 @@
             text-align: justify;
         }
 
-        .btn-top {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #33a018;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            display: none;
-        }
-
-        .btn-top:hover {
-            background: #065217;
-        }
-
         footer {
             background-color: #065217;
             color: white;
@@ -115,6 +97,24 @@
             bottom: 0;
             width: 100%;
             font-size: 1em;
+        }
+
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #33a018;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            display: none;
+            transition: opacity 0.3s;
+        }
+
+        .back-to-top:hover {
+            background-color: #288b3d;
         }
     </style>
 </head>
