--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         nav {
             display: flex;
-            justify-content: ;
+            justify-content:center ;
             background-color: #33a018;
             padding: 10px 0;
             margin-top: 50px;
