--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Meu Site Sustentável</title>
     <style>
         
+      <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpeg" href="icon.jpeg">
+    <link rel="shortcut icon" href="icon.jpeg">
+    <title>Meu Site Sustentável</title>
+    <style>
         body {
             background-image: url("fundo.jpeg"); 
             background-size: cover; 
@@ -16,6 +25,7 @@
             height: 100vh; 
             margin: 0; 
             font-family: Arial, sans-serif;
+            display: flex;
         }
 
         header {
@@ -25,45 +35,46 @@
             text-align: center;
             font-size: 1.5em;
             font-weight: bold;
-            position: fixed;
             width: 100%;
+            position: fixed;
             top: 0;
+            left: 0;
             z-index: 1000;
         }
 
-        nav {
-            display: flex;
-            justify-content:center ;
+        .sidebar {
+            width: 250px;
+            height: 100vh;
             background-color: #33a018;
-            padding: 10px 0;
-            margin-top: 50px;
             position: fixed;
-            width: 100%;
-            top: 60px;
-            z-index: 999;
+            left: 0;
+            top: 0;
+            padding-top: 60px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.5);
         }
 
-        nav a {
-            color: rgb(0, 0, 0);
+        .sidebar a {
+            display: block;
+            color: rgb(255, 255, 255);
             text-decoration: none;
-            margin: 0 15px;
+            padding: 15px;
             font-weight: bold;
             font-size: 1.2em;
-            transition: color 0.3s;
         }
 
-        nav a:hover {
-            color: white;
+        .sidebar a:hover {
+            background-color: #288b3d;
         }
 
         main {
+            margin-left: 270px;
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
-            padding: 100px 20px 20px;
+            padding: 20px;
             max-width: 800px;
-            margin: 0 auto;
+            margin-top: 70px;
         }
 
         section {
@@ -71,11 +82,6 @@
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
             border-radius: 10px;
-            transition: transform 0.3s;
-        }
-
-        section:hover {
-            transform: scale(1.03);
         }
 
         h2 {
@@ -97,24 +103,6 @@
             bottom: 0;
             width: 100%;
             font-size: 1em;
-        }
-
-        .back-to-top {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background-color: #33a018;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            display: none;
-            transition: opacity 0.3s;
-        }
-
-        .back-to-top:hover {
-            background-color: #288b3d;
         }
     </style>
 </head>
