--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         Informática como Aliada no Desenvolvimento Sustentável
     </header>
 
-    <nav>
+    <nav class="sidebar">
         <a href="#introduçao">Informática e Meio Ambiente: Impactos e Soluções Sustentáveis</a>
         <a href="#impactos">Impactos Ambientais</a>
         <a href="#solucoes">Soluções Sustentáveis</a>
