--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         </section>
 
         <section id="solucoes">
+            <h2>Soluções Tecnológicas Sustentáveis</h2>
             <h4>1. Energia Limpa para Data Centers</h4>
             <p>Empresas como Google e Microsoft estão investindo em fontes de energia renovável para reduzir o impacto ambiental.</p>
             
