--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             height: 100vh; 
             margin: 0; 
             font-family: Arial, sans-serif;
+            text-align: center;
         }
         header {
             background-color: #00ff2a;
