--- a/index.html
+++ b/index.html
@@ -82,6 +82,18 @@
             line-height: 1.6;
             text-align: justify;
         }
+        table {
+            margin: auto;
+            border-collapse: collapse;
+            width: 80%;
+        }
+
+        th, td {
+            border: 1px solid #288b3d;
+            padding: 10px;
+            text-align: center;
+        }
+
 
         footer {
             background-color: #065217;
@@ -208,7 +220,7 @@
         </section>
     </main>
 
-    <button class="btn-top" onclick="topFunction()">⬆ Topo</button>
+   <button class="btn-top" onclick="topFunction()">⬆ Topo</button>
 
     <footer>
         © 2025 - Desenvolvimento Sustentável e Tecnologia
@@ -226,6 +238,8 @@
         function topFunction() {
             window.scrollTo({ top: 0, behavior: "smooth" });
         }
+    </script>
+</body>
     </script>
 </body>
 </html>
