--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             margin: 0; 
             font-family: Arial, sans-serif;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         header {
             background-color: #00ff2a;
@@ -64,6 +67,7 @@
             padding: 20px;
             max-width: 800px;
             margin-top: 70px;
+            width: 100%;
         }
 
         section {
